# Interpolation

./: .gitignore  Interpolation.slnx  README.md
Interpolation/: CMakeLists.txt  CP.txt  Interpolation.cpp  Interpolation.h  Interpolation.vcxproj  Interpolation.vcxproj.filters  Point2D.h  main.cpp
Interpolation_new/Interpolation_new/: CMakeLists.txt  Curve.ps  Interpolation.cpp  Interpolation.h  Interpolation_new.vcxproj  Point2D.h  main.cpp  points.txt
Interpolation_new/Project1/: Interpolation.cpp  Interpolation.h  Project1.vcxproj.filters
